--- a/README
+++ b/README
@@ -3,7 +3,7 @@ GreenHKMarket.com - Organic and Sustainable Products in the UK
 Welcome to GreenHKMarket! This project is an e-commerce website offering a wide range of organic and sustainable products in the United Kingdom.
 
 Description:
-GreenHKMarket.com is your go-to online platform for environmentally conscious consumers in the UK. We are dedicated to providing a diverse selection of high-quality organic and sustainable products that promote a greener and healthier lifestyle.
+GreenHKMarket.com is your go-to online platform for environmentally-conscious consumers in the UK. We are dedicated to providing a diverse selection of high-quality organic and sustainable products that promote a greener and healthier lifestyle.
 
 Product Range:
 Explore our extensive range of organic and sustainable products, carefully curated to meet the demands of eco-conscious individuals in the UK. From organic food and beverages to natural beauty and personal care items, eco-friendly home essentials, sustainable fashion, and much more, we have everything you need to make sustainable choices.
@@ -25,6 +25,6 @@ Installation and Usage:
 To access GreenHKMarket.com, simply visit our website at www.greenhkmarket.com. You can browse the products, add them to your cart, and proceed with the checkout process. Registering an account enables you to track your orders and access additional features.
 
 Contact:
-For any questions, feedback, or support, please reach out to our team at contact@greenhkmarket.com. We are here to assist you and provide the best possible shopping experience.
+For any questions, feedback, or support, please reach out to our team at greenhkmarket@gmail.com. We are here to assist you and provide the best possible shopping experience.
 
 Thank you for choosing GreenHKMarket.com, where you can discover and embrace a greener lifestyle with our wide range of organic and sustainable products.
